Fix spot hazard scene alignment

--- a/css/spotgame.css
+++ b/css/spotgame.css
@@ -141,8 +141,6 @@
   display: block;
   width: 100%;
   height: auto;
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
   user-select: none;
   -webkit-user-drag: none;
 }
